StrictUnusedVariable handles Java 14 records (#1412)
StrictUnusedVariable handles Java 14 records